--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telegram Chat Bot Using Brainshop.Ai API",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
